--- a/Application/src/main/resources/static/index.html
+++ b/Application/src/main/resources/static/index.html
@@ -48,6 +48,12 @@
                             </div>
                             <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862126">Learn more about all you can do with GitHub workflow by visiting the documentation</a></div>
                         </div>
+                        <div class="step">
+                            <div class="step-icon">
+                                <img src="img/lightbulbWhite.svg" />
+                            </div>
+                            <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862126">Student info</a></div>
+                        </div>
                     </div>
                 </div>
             </div>
